Centralize API calls to Forge/Neoforge